added a paragraph tag

--- a/index.html
+++ b/index.html
@@ -306,6 +306,9 @@
     <br />
     <textarea name="message" id="message" placeholder="Input your Feedback here" rows="10" cols="50"></textarea>
     <input type="submit">
+    <p>
+      I love HerTechTrail
+    </p>
   </form>
   <table style="border: 1px solid black; padding: 10px">
     <caption>Student Scores</caption>
