added a strong element

--- a/index.html
+++ b/index.html
@@ -350,7 +350,9 @@
   <video id="my-video" class="video-js" controls preload="auto" width="400"  data-setup="{}">
     <source src="videos/video1.mp4.mp4" type="video/mp4">
   </video>
-
+<strong>
+  a women only platform
+</strong>
   
 <script src="https://vjs.zencdn.net/8.23.4/video.min.js"></script>
 </body>
